chore: basic frontend
